src/app/dprcalc/dprcalc.component.scss
@use "sass:map";
@import "../theme.scss";

hr {
  width: 75%;
  border-color: black;
}

.playerStats {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: top;
  width: 100%;
  height: 100%;
  padding: 5%;
}

.enemyStats {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: top;
  width: 100%;
  height: 100%;
  padding: 5%;
}

.attackBonusValue {
  padding-right: 10%;
  padding-left: 5%;
  width: 40%;
}

.grid-layout-custom {
  width: 50vw;
  height: 50vh;
}

.attackDamage {
  width: 40%;
  padding-left: 5%;
  padding-right: 5%;
}

.sectionHeader {
  padding: 5%;
  font-family: Roboto, "Helvetica Neue", sans-serif;
  font-size: 24px;
  font-weight: 500;
}

.mat-grid-tile {
  border-right: solid 2px rgb(0, 0, 0);
}

.results {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  gap: 25px;
}

.resultsItem {
  flex: 1 1 auto;
}

